--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,14 @@ body,
   width: 150px;
 }
 
+.sound-icon {
+  position: absolute;
+  top: 120px;
+  left: 40px;
+  z-index: 10;
+  width: 70px;
+}
+
 .block-count-night {
   position: absolute;
   white-space: nowrap;
