--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,11 @@ body,
 }
 
 .intro-container {
-  display: flex;
-  justify-content: center;
-  margin: 10rem;
+  /* display: flex;
+  justify-content: center; */
+  margin-left: auto;
+  margin-right: auto;
+  margin: 20em;
   padding: 3rem;
   border-radius: 1rem;
   background: linear-gradient(
